# 2025_ingbonbonusagi_robot

./: .gitignore  README.md  caonima.txt  line_params.json  requirements.txt  ~$supergood.pptx
EV3_robotarm/6_DOF_robotarm_ev3A/: ev3_motorA.py  ev3_motorB.py  ev3_motorC.py  launch_motors.py  test_led.py
EV3_robotarm/6_DOF_robotarm_ev3B/: ev3_motorD.py  ev3_motorE.py  ev3_motorF.py  fuck.txt  launch_motors.py  test_led.py
WineRobot/: gui.py  kinematics.py  main.py  plot_worspace.py  test_limit.py  verify_accuracy.py
install/: local_setup.sh  setup.sh
log/: latest_build
matlab_ws/: lego_arm_rtb.m  lego_arm_simulation.m  lego_workspace_painter.m  robot.fig  robot.m  verify_lego_arm.m
robot_web_interface/: blink_control.py  test_button_function.py  user_interface.py
robot_web_interface/static/CSS/: style.css
robot_web_interface/static/javascripts/: bar_blinks.js  cancel_and_return.js  run_control.js
robot_web_interface/templates/: base.html  progress.html
robot_web_interface/venv310/: pyvenv.cfg
robot_web_interface/venv310/Scripts/: activate  activate.bat
ros2_ws/: line_params.json  liquid_level.json  path.json  test_line_path.json  test_point.json  test_single_point.json
ros2_ws/src/camera/: setup.py
ros2_ws/src/ev3_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/ev3_mqtt_bridge/: setup.cfg  setup.py
ros2_ws/src/flask_ui/: package.xml  (+2 more)
src/camera/: package.xml  setup.cfg  setup.py
src/ev3_interfaces/: CMakeLists.txt
src/ev3_mqtt_bridge/: package.xml  setup.cfg  setup.py
src/robot_arm_system/: package.xml  setup.cfg
src/robot_arm_system/robot_arm_system/: ik_node.py
(+163 files in other folders)
