<?xml version="1.0"?>
<package format="3">
  <name>ev3_interfaces</name>
  <version>0.0.0</version>
  <description>EV3 action and service interfaces</description>

  <maintainer email="lego@todo.todo">lego</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- interface generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- needed so other packages can depend on this -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
